@@ -1,6 +1,6 @@
 Package: RcmdrMisc
 Version: 2.7-1
-Date: 2020-05-24
+Date: 2020-07-22
 Title: R Commander Miscellaneous Functions
 Authors@R: c(person("John", "Fox", role = c("aut", "cre"), email = "jfox@mcmaster.ca"),
     person("Robert", "Muenchen", role = "ctb"),
